--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "arduino",
+  "name": "arduinop",
   "version": "0.1.0",
   "private": true,
   "scripts": {
@@ -9,9 +9,17 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "bcrypt": "^5.1.1",
+    "chart.js": "^4.4.0",
+    "cookie": "^0.5.0",
+    "jose": "^4.14.6",
+    "mysql2": "^3.6.1",
+    "next": "latest",
     "react": "latest",
+    "react-chartjs-2": "^5.2.0",
     "react-dom": "latest",
-    "next": "latest"
+    "react-hook-form": "^7.46.2",
+    "react-icons": "^4.11.0"
   },
   "devDependencies": {
     "autoprefixer": "latest",
